php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #23279 output buffering failure with set_exception_handler
Submitted: 2003-04-19 11:11 UTC Modified: 2003-06-15 10:08 UTC
Votes:1
Avg. Score:3.0 ± 0.0
Reproduced:1 of 1 (100.0%)
Same Version:1 (100.0%)
Same OS:0 (0.0%)
From: george at omniti dot com Assigned:
Status: Closed Package: Scripting Engine problem
PHP Version: 5CVS-2003-04-19 (dev) OS: linux
Private report: No CVE-ID: None
 [2003-04-19 11:11 UTC] george at omniti dot com
<?php
ob_start();
set_exception_handler('redirect_on_error');
echo "Hello World\n";
throw new Exception;

function redirect_on_error($e) {
    ob_end_clean();
    echo "Goodbye Cruel World\n";
}
?>

generates empty output with no warnings.

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2003-06-15 10:08 UTC] stas@php.net
This bug has been fixed in CVS.

In case this was a PHP problem, snapshots of the sources are packaged
every three hours; this change will be in the next snapshot. You can
grab the snapshot at http://snaps.php.net/.
 
In case this was a documentation problem, the fix will show up soon at
http://www.php.net/manual/.

In case this was a PHP.net website problem, the change will show
up on the PHP.net site and on the mirror sites in short time.
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Mon Sep 21 09:00:01 2026 UTC