Fix bug #23279 - exception handler exits after first function call

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@131688 c90b9560-bf6c-de11-be94-00142212c4b1